[package]
name = "gamba-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9"
toml = "0.8.16"
anyhow = "1.0.86"
chrono = "0.4.38"
date_component = "0.4.1"
open = "5.3.0"
device_query = "2.1.0"
base64-url = "2.0.2"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3"